--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
+img{
+  margin-left: 0;
+}
+
 body{
-  background-color: #0F172A;
+  background-color: white;
 }
 
 main{
@@ -27,13 +31,13 @@ main{
 header{
   margin-top: 64px;
   padding-bottom: 24px;
-  border-bottom: 1px solid #334155;
+  border-bottom: 1px solid #1dabe4;
 }
 
 header h1{
   margin-top: 24px;
   font-size: 30px;
-  color: #f1f5f9;
+  color: black;
 }
 
 #quiz {
@@ -43,7 +47,7 @@ header h1{
 
 .quiz-item {
   margin-top: 24px;
-  border: 1px solid#475569;
+  border: 1px solid #1dabe4; 
   border-radius: 6px;
 
   overflow: hidden;
@@ -57,14 +61,14 @@ header h1{
   align-items: center;
   gap: 12px;
 
-  background-color: #1e293B;
+  background-color: #1dabe4;
 }
 
 .quiz-item h3::before{
   counter-increment: quiz-item;
   content: counter(quiz-item);
 
-  background-color: #475569;
+  background-color: rgb(31, 83, 117);
   width: 28px;
   height: 28px;
   font-size: 12px;
@@ -92,7 +96,7 @@ header h1{
   align-items: center;
   gap: 8px;
 
-  color: #e2e8f0;
+  color: black;
 }
 
 input{
