--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ input{
 }
 
 input:checked {
-  border: 1px solid #A3E635;
+  border: 1px solid red;
 }
 
 input:checked:before{
@@ -122,13 +122,13 @@ input:checked:before{
   height: 10px;
 
   display: block;
-  background-color: #A3E635;
+  background-color: red;
   border-radius: 50%;
 }
 
 #acertos {
   text-align: center;
-  background-color: #A3E635;
+  background-color: red;
 
   position: fixed;
   bottom: 0;
