--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header h1{
 
 .quiz-item {
   margin-top: 24px;
-  border: 1px solid #1dabe4; 
+  border: 1px solid #1dace4f3; 
   border-radius: 6px;
 
   overflow: hidden;
